# hab-predictor

./: .dockerignore  .gitignore  Dockerfile  Dockerrun.aws.json  Gemfile  Procfile  Procfile.dev  README.md  available_keys.md  available_keys.txt  docker-compose.yml
.ebextensions/: increase-timeout.config
app/controllers/: footprint_controller.rb  guidance_controller.rb  navigation_controller.rb  prediction_controller.rb  status_controller.rb
app/helpers/: prediction_helper.rb
app/workers/: download_worker.rb  import_worker.rb  (+5 more)
config/: application.rb  database.yml  puma.rb  routes.rb  schedule.rb  secrets.yml
crates/predictor/: Cargo.toml  build.rs  predictor.gemspec
crates/predictor/lib/: predictor.rb
crates/predictor/lib/tasks/: helix_runtime.rake
crates/predictor/src/: lib.rs  macros.rs
crates/predictor/src/navigation/: generational_pqueue.rs  guidance.rs  guidance_node.rs  mod.rs  navigation.rs  navigation_node.rs
crates/predictor/src/predictor/: dataset.rs  dataset_reader.rs  footprint.rs  generational_pqueue.rs  generational_search.rs  grib_reader.rs  guidance.rs  guidance_node.rs  hello.go  macros.rs  mod.rs  point.rs  predictor.rs  wgrib.c
crates/predictor/src/predictor/grib/: config.h  grib_accessor_class_g1step_range.c  grib_api_version.c  grib_api_version.h  grib_hash_keys.c  grib_itrie_keys.c
crates/predictor/src/valbal/: controller.rs  mod.rs  physics.rs  state.rs
crates/predictor/src/valbal/controllers/: mod.rs  pid_controller.rs
deploy/: boot.sh  download_daemon.sh  nginx.conf.nginx  start_foreman.sh
preprocessor/: Cargo.toml
(+41 files in other folders)
