[package]
name = "predictor"
version = "0.1.0"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
helix = "0.6.1"

chrono = "0.3"

lazy_static = "0.2"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

libc = "0.2.0"

[build-dependencies.gcc]
git = "https://github.com/alexcrichton/gcc-rs"
